@@ -27,10 +27,10 @@ package net.fabricmc.loom;
 import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 
-import com.google.common.collect.ImmutableMap;
 import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
 import org.gradle.api.Plugin;
@@ -98,8 +98,8 @@ public class LoomGradlePlugin implements Plugin<PluginAware> {
 		LibraryLocationLogger.logLibraryVersions();
 
 		// Apply default plugins
-		project.apply(ImmutableMap.of("plugin", "java-library"));
-		project.apply(ImmutableMap.of("plugin", "eclipse"));
+		project.apply(Map.of("plugin", "java-library"));
+		project.apply(Map.of("plugin", "eclipse"));
 
 		// Setup extensions
 		project.getExtensions().create(LoomGradleExtensionAPI.class, "loom", LoomGradleExtensionImpl.class, project, LoomFiles.create(project));
