@@ -38,7 +38,6 @@ import java.util.Map;
 import java.util.Set;
 import java.util.function.Supplier;
 
-import com.google.common.collect.ImmutableMap;
 import org.gradle.api.Project;
 import org.gradle.api.artifacts.Configuration;
 import org.gradle.api.artifacts.FileCollectionDependency;
@@ -58,6 +57,8 @@ import org.gradle.api.tasks.SourceSet;
 import org.gradle.jvm.JvmLibrary;
 import org.gradle.language.base.artifact.SourcesArtifact;
 import org.jetbrains.annotations.Nullable;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import net.fabricmc.loom.LoomGradleExtension;
 import net.fabricmc.loom.LoomGradlePlugin;
@@ -65,6 +66,7 @@ import net.fabricmc.loom.api.RemapConfigurationSettings;
 import net.fabricmc.loom.configuration.RemapConfigurations;
 import net.fabricmc.loom.configuration.mods.dependency.ModDependency;
 import net.fabricmc.loom.configuration.mods.dependency.ModDependencyFactory;
+import net.fabricmc.loom.configuration.mods.dependency.ModDependencyOptions;
 import net.fabricmc.loom.configuration.providers.minecraft.MinecraftSourceSets;
 import net.fabricmc.loom.util.Checksum;
 import net.fabricmc.loom.util.Constants;
@@ -78,6 +80,8 @@ public class ModConfigurationRemapper {
 	// This is a placeholder that is used when the actual group is missing (null or empty).
 	// This can happen when the dependency is a FileCollectionDependency or from a flatDir repository.
 	public static final String MISSING_GROUP = "unspecified";
+
+	private static final Logger LOGGER = LoggerFactory.getLogger(ModConfigurationRemapper.class);
 
 	public static void supplyModConfigurations(Project project, ServiceFactory serviceFactory, String mappingsSuffix, LoomGradleExtension extension, SourceRemapper sourceRemapper) {
 		final DependencyHandler dependencies = project.getDependencies();
@@ -98,7 +102,7 @@ public class ModConfigurationRemapper {
 
 		for (RemapConfigurationSettings entry : remapConfigurationSettings) {
 			// key: true if runtime, false if compile
-			final Map<Boolean, Boolean> envToEnabled = ImmutableMap.of(
+			final Map<Boolean, Boolean> envToEnabled = Map.of(
 					false, entry.getOnCompileClasspath().get(),
 					true, entry.getOnRuntimeClasspath().get()
 			);
@@ -133,6 +137,15 @@ public class ModConfigurationRemapper {
 				project.getConfigurations().getByName(Constants.Configurations.NAMED_ELEMENTS).extendsFrom(remappedConfig);
 				configsToRemap.put(entry.getSourceConfiguration().get(), remappedConfig);
 			}
+		}
+
+		final ModDependencyOptions modDependencyOptions = ModDependencyOptions.create(project, ModDependencyOptions.class, options -> {
+			options.getMappings().set(mappingsSuffix);
+			options.getInlineRefmap().set(extension.getMixin().getInlineDependencyRefmaps());
+		});
+
+		if (LOGGER.isInfoEnabled()) {
+			LOGGER.info("Mod dependency options: {}", modDependencyOptions.getJson());
 		}
 
 		// Round 1: Discovery
@@ -177,7 +190,7 @@ public class ModConfigurationRemapper {
 					continue;
 				}
 
-				final ModDependency modDependency = ModDependencyFactory.create(artifact, artifactMetadata, remappedConfig, clientRemappedConfig, mappingsSuffix, project);
+				final ModDependency modDependency = ModDependencyFactory.create(artifact, artifactMetadata, remappedConfig, clientRemappedConfig, modDependencyOptions, project);
 				scheduleSourcesRemapping(project, sourceRemapper, modDependency);
 				modDependencies.add(modDependency);
 			}
@@ -263,7 +276,7 @@ public class ModConfigurationRemapper {
 
 			for (File artifact : files) {
 				final String name = getNameWithoutExtension(artifact.toPath());
-				final String version = replaceIfNullOrEmpty(dependency.getVersion(), () -> Checksum.truncatedSha256(artifact));
+				final String version = replaceIfNullOrEmpty(dependency.getVersion(), () -> Checksum.of(artifact).sha256().hex(10));
 				artifacts.add(new ArtifactRef.FileArtifactRef(artifact.toPath(), group, name, version));
 			}
 		}
@@ -333,7 +346,7 @@ public class ModConfigurationRemapper {
 		}
 
 		if (dependency.isCacheInvalid(project, "sources")) {
-			final Path output = dependency.getWorkingFile("sources");
+			final Path output = dependency.getWorkingFile(project, "sources");
 
 			sourceRemapper.scheduleRemapSources(sourcesInput.toFile(), output.toFile(), false, true, () -> {
 				try {
